@@ -7,12 +7,12 @@ Gem::Specification.new do |gem|
   gem.version       = "1.4.1"
   gem.authors       = ["vaiorabbit"]
   gem.email         = ["vaiorabbit@gmail.com"]
-  gem.summary       = %q{Bindings for OpenGL -4.5, ES - 3.1 and extensions (For MRI >= 2.0.0)}
+  gem.summary       = %q{Bindings for OpenGL -4.5, ES - 3.2 and extensions (For MRI >= 2.0.0)}
   gem.homepage      = "https://github.com/vaiorabbit/ruby-opengl"
   gem.require_paths = ["lib"]
   gem.license       = "zlib/libpng"
   gem.description   = <<-DESC
-Ruby bindings for OpenGL - 4.5, OpenGL ES - 3.1 and all extensions using Fiddle (For MRI >= 2.0.0).
+Ruby bindings for OpenGL - 4.5, OpenGL ES - 3.2 and all extensions using Fiddle (For MRI >= 2.0.0).
   DESC
 
   gem.required_ruby_version = '>= 2.0.0'
